<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="billingViewModel"
            type="com.kradic.carpediem.billing.BillingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".billing.BillingFragment"
        android:background="@android:color/black">

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> billingViewModel.startNavigatingBackHome()}"
            android:text="@string/povratak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rect_button"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/btnDeleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/poni_ti_ra_un"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnExit"
            android:background="@drawable/rect_button"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDeleteAll">

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnJuices"
                    android:layout_width="@dimen/btnWidth"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> billingViewModel.startNavigatingToDrinksFromJuices()}"
                    android:text="@string/sokovi"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/btnWater"
                    android:layout_width="@dimen/btnWidth"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> billingViewModel.startNavigatingToDrinksFromWater()}"
                    android:text="@string/voda"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/btnBeers"
                    android:layout_width="@dimen/btnWidth"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> billingViewModel.startNavigatingToDrinksFromBeer()}"
                    android:text="@string/piva"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/btnWhiskey"
                    android:layout_width="@dimen/btnWidth"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> billingViewModel.startNavigatingToDrinksFromWhiskey()}"
                    android:text="@string/whiskey"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/btnJegger"
                    android:layout_width="@dimen/btnWidth"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> billingViewModel.startNavigatingToDrinksFromJegger()}"
                    android:text="@string/jegger"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/btnGin"
                    android:layout_width="@dimen/btnWidth"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> billingViewModel.startNavigatingToDrinksFromGin()}"
                    android:text="@string/gin"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/btnVodka"
                    android:layout_width="@dimen/btnWidth"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> billingViewModel.startNavigatingToDrinksFromVodka()}"
                    android:text="@string/vodka"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/btnTequila"
                    android:layout_width="@dimen/btnWidth"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> billingViewModel.startNavigatingToDrinksFromTekila()}"
                    android:text="@string/tekila"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/btnRest"
                    android:layout_width="@dimen/btnWidth"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"
                    android:onClick="@{() -> billingViewModel.startNavigatingToDrinksFromRest()}"
                    android:text="@string/ostalo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtRacun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/ra_un"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:paddingStart="8dp"
                        android:text="@string/artikl"
                        android:background="@drawable/rect_button"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:text="@string/kom"
                        android:paddingStart="8dp"
                        android:gravity="center"
                        android:background="@drawable/rect_button"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:text="@string/cijenaa"
                        android:layout_weight="1"
                        android:paddingEnd="8dp"
                        android:gravity="right"
                        android:background="@drawable/rect_button"
                        android:textColor="@android:color/white"
                        />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/billDrinks"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="@drawable/rect_button" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:background="@drawable/rect_button"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtSum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0 kn"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btnWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/ispis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rect_button"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnPopust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:visibility="gone"
            android:text="@string/popust"
            android:background="@drawable/rect_button"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/btnEuro"
            app:layout_constraintStart_toEndOf="@+id/btnDeleteAll"
            app:layout_constraintTop_toBottomOf="@+id/btnWrite" />

        <Button
            android:id="@+id/btnEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:visibility="gone"
            android:text="@string/euro"
            android:background="@drawable/rect_button"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnWrite" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
