<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="bill"
            type="com.kradic.carpediem.database.Bill" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingStart="8dp"
            android:paddingEnd="16dp"
            android:text="@string/_1"
            android:textSize="15sp"
            android:background="@drawable/rect_button"
            android:textColor="@android:color/white"
            app:billOrdinalNo="@{bill}"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="2"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/random"
            android:background="@drawable/rect_button"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:billNumber="@{bill}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:gravity="center"
            android:text="@string/_00_00_00"
            android:background="@drawable/rect_button"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:billTime="@{bill}"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:gravity="right"
            android:background="@drawable/rect_button"
            android:textColor="@android:color/white"
            android:text="@string/_0_00_kn"
            android:textSize="15sp"
            app:billAmount="@{bill}"/>

    </LinearLayout>
</layout>

