<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="billsViewModel"
            type="com.kradic.carpediem.bills.BillsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".bills.BillsFragment"
        android:background="@android:color/black">


        <Button
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/povratak"
            android:background="@drawable/rect_button"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnRacuni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ra_uni"
            android:background="@drawable/rect_button"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnReturn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rect_button">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="16dp"
                    android:text="@string/rb"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/ra_un_broj"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@android:color/white"
                    android:text="@string/vrijeme"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="8dp"
                    android:textColor="@android:color/white"
                    android:text="@string/iznos"
                    android:textSize="15sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/billsList"
                android:layout_width="match_parent"
                android:background="@drawable/rect_button"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rect_button">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:paddingStart="8dp"
                    android:text="@string/total"
                    />
                <TextView
                    android:id="@+id/txtBillsTotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="0.00"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:paddingEnd="8dp"
                    android:gravity="end"
                    android:layout_marginEnd="16dp"
                    />
            </LinearLayout>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
