<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addArticleViewModel"
            type="com.kradic.carpediem.addArticle.AddArticleViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addArticle.AddArticleFragment"
        android:background="@android:color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/naziv"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/etArticle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:paddingStart="8dp"
                    android:text="@={addArticleViewModel.article}"
                    android:hint="@string/unesite_naziv_artikla"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kategorija"
                    android:textSize="25sp"
                    android:textColor="@android:color/white"/>

                <Spinner
                    android:id="@+id/catSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:backgroundTint="@android:color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cijena"
                    android:textSize="25sp"
                    android:textColor="@android:color/white"/>

                <EditText
                    android:id="@+id/etCijena"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="0.00"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="numberDecimal"
                    android:text="@={addArticleViewModel.price}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kn"
                    android:textColor="@android:color/white"
                    android:singleLine="true"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> addArticleViewModel.insertDrink()}"
                    android:text="@string/potvrdi"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/btnReturn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/povratak"
                    android:background="@drawable/rect_button"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
